Quorum3/Library/Tests/TypeChecker/Pass/ExpAssignTextTextObjField.quorum
class Main
    Text t
    text txt = ""
    action Main
        t:SetValue("text")
        txt = cast(text, t)
        if txt = "text"
            output "passed"
        end
    end
end