Quorum3/Library/Tests/TypeChecker/Fail/ExpAssignIntObjTextObjField.quorum
class main
    text t
    Integer int
    action Main
        t:SetValue("text")
        int = cast(Integer, t)
    end
end